<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Learning TC</string>
    
    <string name="action_about">About</string>
    <string name="action_credits">Credits</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    
    <string name="hello_world">Hello world!</string>
    
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    
    <string name="title_activity_intro">Introduction</string>
    <string name="button_register">
        <a href="http://elearning.if.its.ac.id/login/signup.php?">Register</a>   
    </string>
    <string name="button_login">Log In</string>
    
    <string name="title_activity_login">Log In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    
    <string name="about_content_1">Mobile Learning TC is a Moodle application for Android. Built with an idea to access the Moodle site\'s contents with your Android device.</string>
    <string name="about_server_title">Server</string>
    <string name="about_server_content">e-Learning Informatics Department, ITS</string>
    <string name="about_server_link">http://elearning.if.its.ac.id</string>
    <string name="about_content_2">Hopefuly useful!</string>
    
    <string name="credits_developer_title">Developer</string>
    <string name="credits_developer_content">Fariani Dewi Yulianti from Informatics Department, ITS Indonesia. This application was created for the purpose of Final Project.</string>
    <string name="credits_supervisor_title">Supervisor</string>
    <string name="credits_supervisor_content">1. Sarwosri, S.Kom., M.T.\n2. Wijayanti Nurul K, S.Kom., M.Sc.</string>
    <string name="credits_critics">Any criticism and suggestion can be submitted via email with subject \"[MobileLearningTC]\" to petiteaiueo@gmail.com</string>
        
    <string name="title_fragment_course">Course</string>
    <string name="title_fragment_calendar">Calendar</string>
    <string name="title_fragment_userprofile">User Profile</string>
    <string name="title_fragment_blog">Blog</string>
    <string name="title_fragment_privatefile">Private File</string>
    <string name="title_fragment_messaging">Messaging</string>
    <string name="title_activity_settings">Settings</string>
     
    <string name="image_user">User Photo</string>
    <string name="profile_username">Username</string>
    <string name="profile_country">Country</string>
    <string name="profile_city">City/Town</string>
    <string name="profile_email_address">Email Address</string>
    <string name="profile_first_access">First Access</string>
    <string name="profile_last_access">Last Access</string>
    
    <string name="response_empty_data">Maaf, tidak ada data yang dapat ditampilkan.</string>
    
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_course_topic">Course Topic</string>
    <string name="title_activity_course_detail_topic">Course Detail Topic</string>
    
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="content_welcome">Selamat datang, </string>
    <string name="link_user_profile">&lt;u>%1$s (%2$s)&lt;/u></string>
    <string name="button_course">Course</string>
    <string name="button_calendar">Calendar</string>
    
</resources>