<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <RelativeLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    
        <TextView
            android:id="@+id/tvCreditsDevelopedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/credits_developer_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/title" />
	
	    <TextView
	        android:id="@+id/tvCreditsDevelopedContent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvCreditsDevelopedTitle"
	        android:layout_below="@+id/tvCreditsDevelopedTitle"
	        android:layout_marginTop="10dp"
	        android:text="@string/credits_developer_content" />
	    
	    <TextView
	        android:id="@+id/tvCreditsSupervisorTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/tvCreditsDevelopedContent"
	        android:layout_marginTop="20dp"
	        android:text="@string/credits_supervisor_title"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/title" />
	
	    <TextView
	        android:id="@+id/tvCreditsSupevisorContent"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvCreditsSupervisorTitle"
	        android:layout_below="@+id/tvCreditsSupervisorTitle"
	        android:layout_marginTop="10dp"
	        android:text="@string/credits_supervisor_content" />
	    
	    <TextView
	        android:id="@+id/tvCreditsCritics"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvCreditsSupevisorContent"
	        android:layout_below="@+id/tvCreditsSupevisorContent"
	        android:layout_marginTop="20dp"
	        android:autoLink="email"
	        android:text="@string/credits_critics" />
        
    </RelativeLayout>
    
</ScrollView>