<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashboardActivity" >
    
    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/button_logout"
        android:textColor="#2edaff" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvLogout"
        android:layout_marginTop="15dp"
        android:text="@string/content_welcome" />

    <TextView
        android:id="@+id/tvUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvWelcome"
        android:layout_alignBottom="@+id/tvWelcome"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvWelcome"
        android:text="@string/link_user_profile"
        android:textColor="#0568fd" />

    <ImageButton
        android:id="@+id/ibCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvWelcome"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:contentDescription="@string/button_course"
        android:src="@drawable/button_course" />

    <ImageButton
        android:id="@+id/ibCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ibCourse"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/button_calendar"
        android:src="@drawable/button_calendar" />

</RelativeLayout>